<resources>

    <string name="app_name">OvalBank</string>
    <string name="ovalbank">OvalBank</string>
    <string name="buy_goods">Buy Goods</string>
    <string name="cash_withdrawal">Cash Withdrawal</string>
    <string name="paybill">Paybill</string>
    <string name="more">More</string>
    <string name="worldwide_banking">Worldwide Banking</string>
    <string name="liberty_offers_shipping_to_over_200_countries_worldwide">Liberty offers shipping to over 200 countries worldwide</string>
    <string name="logo">Logo</string>

    <!--    Navigation drawer strings-->

    <string name="home">Home</string>
    <string name="my_transactions"> My Transactions</string>
    <string name="ovalbank_products">OvalBank Products</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="faq">FAQ</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>

    <!--    -->

    <string name="user_icon">user icon</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="edit_profile">Edit profile</string>
    <string name="kenyan_flag">kenyan flag</string>
    <string name="buy_airtime_from">Buy airtime from</string>
    <string name="airtel_logo">airtel logo</string>
    <string name="hint">hint</string>
    <string name="safaricom_logo">safaricom logo</string>
    <string name="telkom_logo">telkom logo</string>
    <string name="enter_amount">Enter amount</string>
    <string name="for_me">For Me</string>
    <string name="for_others">For Others</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="proceed">Proceed</string>
    <string name="get_started">Get Started</string>
    <string name="my_account">My Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="chama">Chama</string>
    <string name="loans">Loans</string>
    <string name="sacco">Sacco</string>
    <string name="savings">Savings</string>
    <string name="history">History</string>
    <string name="withdrawal_from_agent">Withdrawal From Agent</string>
    <string name="withdrawal_from_atm">Withdrawal From ATM</string>
    <string name="transfer_confirmed">Transfer Confirmed</string>
    <string name="money_transfer_has_been_realized">Money transfer has been realized</string>
    <string name="with_the_success_of_your">With the success of your</string>
    <string name="transaction">transaction</string>
    <string name="reference_number">Reference Number</string>
    <string name="receipt">Receipt</string>
    <string name="done">Done</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="_078319">078319</string>
    <string name="_14_06_2017">14.06.2017</string>
    <string name="mastercard_logo">mastercard logo</string>
    <string name="scan_code">scan code</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipisicing_elit_sed_do_eiusmod_tempor">Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor</string>
    <string name="enter_code">enter code</string>
    <string name="icon">icon</string>
    <string name="arrow">arrow</string>
    <string name="textview">TextView</string>
    <string name="_14_250_25">14,250.25</string>
    <string name="actual_balance">Actual Balance</string>
    <string name="available_balance">Available Balance</string>

</resources>